--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-AU"
-title                    : "About"
+title                    : "Balu Sreedhar"
 title_separator          : "-"
 name                     : &name "Balu Sreedhar"
 description              : &description "Astrophysicist at the University of Melbourne"
