added links tab

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,14 @@ main:
 #  - title: "Publications"
 #    url: /publications/
 
+  - title: "CV"
+    url: /cv/
+
 #  - title: "Talks"
 #    url: /talks/    
 
-#  - title: "Teaching"
-#    url: /teaching/    
+  - title: "Links"
+    url: /links/    
     
 #  - title: "Portfolio"
 #    url: /portfolio/
@@ -15,8 +18,6 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
     
 #  - title: "Guide"
 #    url: /markdown/
