--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Balu Sreedhar"
 title_separator          : "-"
 name                     : &name "Balu Sreedhar"
 description              : &description "Astrophysicist at the University of Melbourne"
-url                      : https://balusrdhr.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://s-balu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "s-balu.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "balusrdhr"
+  github           : "s-balu"
   google_plus      :
   keybase          :
   instagram        :
