--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
 #    url: /portfolio/
         
   - title: "Posts"
-    url: /year-archive/
+    url: https://cosmic-hydrogen.notion.site/Blog-posts-5d00809ebd6a4df7a7ec5a7623fbe5e6 
     
     
 #  - title: "Guide"
