--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
 #    url: /portfolio/
         
   - title: "Posts"
-    url: https://cosmic-hydrogen.notion.site/Blog-posts-5d00809ebd6a4df7a7ec5a7623fbe5e6 
+    url: https://cosmic-hydrogen.notion.site/b8a9d9b3f24245fbaad3f197da7df43d?v=403a75d4a1344e7b8546d9b862c830a6 
     
     
 #  - title: "Guide"
